[project]
name = "storb-kademlia"
version = "0.1.0"
description = "A Kademlia DHT implementation in Python using asyncio"
readme = "README.md"
authors = [
    { name = "Brian Muller", email = "bamuller@gmail.com" },
    { name = "freakcoders" }
]
license = {file = "LICENSE"}
dependencies = [
    "rpcudp @ git+https://github.com/fr34kcoders/rpcudp.git",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.9",
    "py-spy>=0.4.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[tool.ruff]
exclude = [
    ".git",
    ".pyenv",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "venv",
]
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["E501"]
select = ["F", "E", "W", "N", "I", "A", "PLC", "PLE", "PLW"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
